<resources>
    <string name="facebook_app_id">750005431826214</string>
    <string name="fb_login_protocol_scheme">fb750005431826214</string>

    <string name="app_name">HackatonHevere</string>

    <string name="title_add_task">Add Task</string>
    <string name="action_settings">Settings</string>
    <string name="Connect">LOG IN</string>
    <string name="Register">Dont have an acount? Sign Up</string>
    <string name="Register_Page">Register</string>
    <string name="Register_button">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="ActiveItemList_home">Active Item List</string>
    <string name="SearchForItem_home">Search For Item</string>
    <string name="my_item_list">New Text</string>
    <string name="search_view">Search_bar</string>
    <string name="type_search_main">Type search</string>
    <string name="search">Search</string>
    <string name="Search_home">Search</string>
    <string name="reminder_question">"Do you want to set a reminder for "</string>
    <string name="confirmation_title">Product confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="entertask_hint">Enter Task</string>
    <string name="addnewtask_button">Add new task</string>
    <string name="action_logout">Logout</string>
    <string name="rememberMe_checkbox">Remember me</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="homeActivity_emptyTaskAlert">Empty Task, please enter new one!</string>
    <string name="homeActivity_taskAdded">OK, Task has been added!</string>
    <string name="homeActivity_illegalTaskAlert">ILLEGAL TASK, task has not been found</string>
    <string name="homeActivity_taskExistsAlert">your TASK is already exist</string>
    <string name="push_notification_buying">BUYING</string>
    <string name="push_notification_not_now">NOT NOW</string>
    <string name="push_notification_title">Don\'t forget your task!</string>
    <string name="homeActivity_title">My tasks</string>
    <string name="mainActivity_title">Login</string>
    <string name="registerActivity_title">Register</string>
    <string name="mainActivity_fillAll">Pleas Enter All Of Your Credentials!</string>
    <string name="mainActivity_wrongPassword">Invalid Password, Please Try Again</string>
    <string name="mainActivity_wrongUsername">Invalid UserName, Please Try Again</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or">or</string>
    <string name="mainActivity_loginWithOnOfTheFollowingText">You can log in with one of the following</string>
    <string name="mainActivity_forgotPassword">Forgot your password?</string>
    <string name="homeActivity_tryRecordingAgain">Try recording again</string>
    <string name="locationMangerService_openGpsMessage">Please open your GPS</string>
    <string name="mainActivity_loginError">Some Fatal Error Happend, Please Try Again</string>
</resources>
