<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_alignParentBottom="true"
              android:layout_alignRight="@+id/rememberMe_checkBox"
              android:layout_alignEnd="@+id/rememberMe_checkBox">

    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity"
                    android:background="#ffffffff">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_username"
            android:textDirection="locale"
            android:ellipsize="start"
            android:ems="10"
            android:id="@+id/username_text"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:textDirection="locale"
            android:ellipsize="start"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/password_text"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/username_text"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Connect"
                android:layout_marginTop="20dp"
                android:id="@+id/Login_button"
                android:textColor="#ffffffff"
                android:background="#4AB6E7"
                android:layout_gravity="center_horizontal"
                android:onClick="loginButton_onClick"
                android:layout_below="@+id/password_text"
                />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Register"
            android:textColor="#4AB6E7"
            android:background="#ffffffff"
            android:id="@+id/Register_button"
            android:layout_gravity="center_horizontal"
            android:onClick="registerButton_onClick"
            android:layout_below="@+id/Login_button"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_username"
            android:id="@+id/imageView"
            android:layout_alignTop="@+id/username_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/password_text"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_password"
            android:layout_alignTop="@+id/password_text"
            android:layout_toRightOf="@+id/username_text"
            android:layout_toEndOf="@+id/username_text"
            android:layout_above="@+id/Login_button"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:id="@+id/rememberMe_checkBox"
            android:layout_below="@+id/Register_button"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rememberMe_checkbox"
            android:layout_toLeftOf="@+id/rememberMe_checkBox"
            android:gravity="center"
            android:layout_below="@+id/Register_button"
            android:layout_alignBottom="@+id/rememberMe_checkBox"/>

        <RelativeLayout
            android:layout_below="@+id/rememberMe_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seperator"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:text="@string/or"
                android:textColor="#c0c0c0"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/or"
                android:background="#c0c0c0"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/or"
                android:background="#c0c0c0"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/optionsText"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/seperator"
            android:text="@string/mainActivity_loginWithOnOfTheFollowingText"
            android:textColor="#c0c0c0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttoLogin"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:layout_below="@+id/optionsText"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/instagram"
                android:background="@null"
                android:scaleType="fitXY"
                android:id="@+id/instagramLogin_button"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/google_nuovo"
                android:background="@null"
                android:scaleType="fitXY"
                android:id="@+id/googleLogin_button"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/instagramLogin_button"
                android:layout_toEndOf="@+id/instagramLogin_button"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/facebook"
                android:background="@null"
                android:scaleType="fitXY"
                android:id="@+id/facebookLogin_button"
                android:layout_marginRight="38dp"
                android:layout_marginEnd="38dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/instagramLogin_button"
                android:layout_toStartOf="@+id/instagramLogin_button"/>

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>